更新数据表结构

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "src/Cms/Menu/Admin.php"
       ],
       "listener": [
+        "Modules\\Cms\\Listeners\\InstallSeed",
         "Modules\\Cms\\Listeners\\ManageForm"
       ]
     }
