--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "duxphp/duxravel-cms",
   "description": "Duxravel CMS Application",
-  "type": "library",
+  "type": "duxravel-app",
   "license": "MIT",
   "authors": [
     {
